--- a/admin/admin_sidebar.master
+++ b/admin/admin_sidebar.master
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head >
+<head>
       <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="../resource/img/logo/EMS-Logo.png" />
 
@@ -41,7 +41,7 @@
     <form id="form1" runat="server">
             
        
-        <div class="layout-wrapper layout-content-navbar">
+    <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
 
          <!-- sidebar start-->
@@ -76,9 +76,9 @@
               </a>
             </li>
                <li class="menu-item ">
-              <a href="index.aspx" class="menu-link">
+              <a href="division.aspx" class="menu-link">
                 <i class="menu-icon tf-icons bx bxl-git"></i>
-                <div data-i18n="Basic">Cards 2</div>
+                <div data-i18n="Basic">Division</div>
               </a>
             </li>
           </ul>
@@ -171,13 +171,15 @@
               </ul>
             </div>
           </nav>
-    <div>
+<div class="content-wrapper">
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
-    </div>
+            <div class="content-backdrop fade"></div>
+             </div>
              </div>
         </div>
+         <div class="layout-overlay layout-menu-toggle"></div>
         </div>
               <!-- header end-->
     </form>
