--- a/admin/admin_sidebar.master
+++ b/admin/admin_sidebar.master
@@ -81,6 +81,12 @@
                 <div data-i18n="Basic">Division</div>
               </a>
             </li>
+               <li class="menu-item ">
+              <a href="employee.aspx" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-user-check"></i>
+                <div data-i18n="Basic">Employee</div>
+              </a>
+            </li>
           </ul>
         </aside>
         <!-- sidebar end-->
@@ -171,12 +177,17 @@
               </ul>
             </div>
           </nav>
-<div class="content-wrapper">
+ <!-- Content wrapper -->
+          <div class="content-wrapper">
+            <!-- Content -->
+
+            <div class="container-xxl flex-grow-1 container-p-y">
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
             <div class="content-backdrop fade"></div>
              </div>
+    </div>
              </div>
         </div>
          <div class="layout-overlay layout-menu-toggle"></div>
@@ -201,7 +212,8 @@
     <script src="../resource/js/main.js"></script>
 
     <!-- Page JS -->
-            <script src="../resource/js/dashboards-analytics.js"></script>
+      <script src="../resource/js/dashboards-analytics.js"></script>
+      <script src="../resource/js/form-basic-inputs.js"></script>
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="../resource/js/button.js"></script>
