--- a/employee/emp-master.master
+++ b/employee/emp-master.master
@@ -1,10 +1,10 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="admin_sidebar.master.cs" Inherits="admin_admin_sidebar" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="emp-master.master.cs" Inherits="employee_emp_master" %>
 
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-      <!-- Favicon -->
+        <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="../resource/img/logo/EMS-Logo.png" />
 
     <!-- Fonts -->
@@ -34,14 +34,15 @@
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="../resource/js/config.js"></script>
+    <asp:ContentPlaceHolder id="ContentPlaceHolder2" runat="server">
+    </asp:ContentPlaceHolder>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
-            
-       
-    <div class="layout-wrapper layout-content-navbar">
+    <div>
+ <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
 
          <!-- sidebar start-->
@@ -70,21 +71,9 @@
               </a>
             </li>
               <li class="menu-item ">
-              <a href="department.aspx" class="menu-link">
-                <i class="menu-icon tf-icons bx bxs-layer"></i>
-                <div data-i18n="Basic">Department</div>
-              </a>
-            </li>
-               <li class="menu-item ">
-              <a href="division.aspx" class="menu-link">
-                <i class="menu-icon tf-icons bx bxl-git"></i>
-                <div data-i18n="Basic">Division</div>
-              </a>
-            </li>
-               <li class="menu-item ">
-              <a href="employee.aspx" class="menu-link">
+              <a href="detail.aspx" class="menu-link">
                 <i class="menu-icon tf-icons bx bxs-user-detail"></i>
-                <div data-i18n="Basic">Employee</div>
+                <div data-i18n="Basic">Details</div>
               </a>
             </li>
           </ul>
@@ -133,18 +122,9 @@
                           </div>
                           <div class="flex-grow-1">
                               <asp:Label ID="lbl_admin_name" CssClass="fw-semibold d-block" runat="server" />
-                            <small class="text-muted">Admin</small>
+                            <small class="text-muted">Employee</small>
                           </div>
                         </div>
-                      </a>
-                    </li>
-                    <li>
-                      <div class="dropdown-divider"></div>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="profile.aspx">
-                        <i class="bx bx-user me-2"></i>
-                        <span class="align-middle">My Profile</span>
                       </a>
                     </li>
                     <li>
@@ -170,7 +150,7 @@
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
-            <div class="content-backdrop fade"></div>
+         <div class="content-backdrop fade"></div>
              </div>
     </div>
              </div>
@@ -202,6 +182,5 @@
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="../resource/js/button.js"></script>
-
 </body>
 </html>
