--- a/admin/admin_sidebar.master
+++ b/admin/admin_sidebar.master
@@ -87,6 +87,12 @@
                 <div data-i18n="Basic">Employee</div>
               </a>
             </li>
+               <li class="menu-item ">
+              <a href="leave.aspx" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-credit-card-front"></i>
+                <div data-i18n="Basic">View Leave</div>
+              </a>
+            </li>
           </ul>
         </aside>
         <!-- sidebar end-->
