--- a/employee/emp-master.master
+++ b/employee/emp-master.master
@@ -52,7 +52,6 @@
               <span class="app-brand-logo demo">
                <asp:Image ID="logo" runat="server" ImageUrl="~/resource/img/logo/EMS-Logo.png" Height="50"  />
               </span>
-                  <%--<span class="app-brand-text demo menu-text fw-bolder ms-2 fs-3">Admin</span>--%>
             </a>
 
             <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
@@ -74,6 +73,12 @@
               <a href="detail.aspx" class="menu-link">
                 <i class="menu-icon tf-icons bx bxs-user-detail"></i>
                 <div data-i18n="Basic">Details</div>
+              </a>
+            </li>
+                 <li class="menu-item ">
+              <a href="leave.aspx" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-credit-card-front"></i>
+                <div data-i18n="Basic">Leave</div>
               </a>
             </li>
           </ul>
