--- a/admin/admin_sidebar.master
+++ b/admin/admin_sidebar.master
@@ -65,7 +65,7 @@
             <!-- Dashboard -->
             <li class="menu-item ">
               <a href="index.aspx" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-home-circle"></i>
+                <i class="menu-icon tf-icons bx bxs-dashboard"></i>
                 <div data-i18n="Analytics">Dashboard</div>
               </a>
             </li>
@@ -77,7 +77,7 @@
             </li>
                <li class="menu-item ">
               <a href="division.aspx" class="menu-link">
-                <i class="menu-icon tf-icons bx bxl-git"></i>
+                <i class="menu-icon tf-icons bx bx-sitemap"></i>
                 <div data-i18n="Basic">Division</div>
               </a>
             </li>
@@ -90,7 +90,13 @@
                <li class="menu-item ">
               <a href="leave.aspx" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-credit-card-front"></i>
-                <div data-i18n="Basic">View Leave</div>
+                <div data-i18n="Basic">Leave</div>
+              </a>
+            </li>
+              <li class="menu-item ">
+              <a href="loan.aspx" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-donate-heart"></i>
+                <div data-i18n="Basic">Loan</div>
               </a>
             </li>
           </ul>
