--- a/employee/emp-master.master
+++ b/employee/emp-master.master
@@ -65,7 +65,7 @@
             <!-- Dashboard -->
             <li class="menu-item ">
               <a href="index.aspx" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-home-circle"></i>
+                <i class="menu-icon tf-icons bx bxs-dashboard"></i>
                 <div data-i18n="Analytics">Dashboard</div>
               </a>
             </li>
@@ -79,6 +79,12 @@
               <a href="leave.aspx" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-credit-card-front"></i>
                 <div data-i18n="Basic">Leave</div>
+              </a>
+            </li>
+               <li class="menu-item ">
+              <a href="loan.aspx" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-donate-heart"></i>
+                <div data-i18n="Basic">Loan</div>
               </a>
             </li>
           </ul>
